implemented a progress dialog for preview generation, the app no longer freezes